# Dafoe

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compose.yaml  databaseCreator  package-lock.json  package.json
BackEnd/src/: CategoryMNG.hpp  Company.hpp  Person.hpp  Product.hpp  main.cpp
BackEnd/src/API/: HTTPRequest.cpp  HTTPRequestParser  HTTPRequestParser.cpp  HTTPRequestParser.hpp  TCPServer.cpp  TCPServer.hpp  teste.cpp
BackEnd/src/API/HTTPRequest/: HTTPRequest.cpp  HTTPRequest.hpp
BackEnd/src/API/HTTPRequestHandler/: HTTPRequestHandler.cpp  HTTPRequestHandler.hpp  teste.cpp
BackEnd/src/API/HTTPRequestParser/: HTTPRequestParser.cpp  HTTPRequestParser.hpp  teste.cpp
BackEnd/src/API/HTTPResponse/: HTTPResponse.cpp  HTTPResponse.hpp
BackEnd/src/API/HTTPResponseBuilder/: HTTPResponseBuilder.cpp  HTTPResponseBuilder.hpp
BackEnd/src/API/HTTPResponseCreator/: HTTPResponseCreator.cpp  HTTPResponseCreator.hpp
BackEnd/src/API/Json/: JsonBuilder.cpp  JsonBuilder.hpp
BackEnd/src/API/Server/: Server.cpp  Server.hpp
BackEnd/src/API/TCPServer/: TCPServer.cpp
BackEnd/src/API/Token/: JWToken.cpp  JWToken.hpp  Session.cpp  Session.hpp  teste.cpp
BackEnd/src/Category/: Category.cpp  Category.hpp  CategoryDAO.cpp  CategoryDAO.hpp  CategoryMNG.cpp  CategoryMNG.hpp
BackEnd/src/Client/: Client.cpp  Client.hpp  ClientDAO.cpp  ClientDAO.hpp  ClientMNG.cpp  ClientMNG.hpp  main  teste.cpp
BackEnd/src/Company/: Company.cpp  Company.hpp
BackEnd/src/DafoeGod/: DafoeGod.cpp  DafoeGod.hpp  teste.cpp
BackEnd/src/Employee/: Employee.cpp  Employee.hpp  EmployeeDAO.cpp  EmployeeDAO.hpp  EmployeeMNG.cpp  EmployeeMNG.hpp  TetsEmployee.cpp
BackEnd/src/GenericProduct/: GenericProduct.cpp  GenericProduct.hpp  GenericProductDAO.cpp  GenericProductDAO.hpp  GenericProductMNG.cpp  GenericProductMNG.hpp
BackEnd/src/JSONParser/: JSONParser.cpp  JSONParser.hpp  functions.hpp  main  package.json
BackEnd/src/Manufacturer/: Manufacturer.cpp  Manufacturer.hpp  ManufacturerDAO.cpp  ManufacturerDAO.hpp  ManufacturerMNG.cpp  ManufacturerMNG.hpp
BackEnd/src/Order/: Order.cpp  Order.hpp  OrderDAO.cpp  OrderDAO.hpp
BackEnd/src/PaymentMethod/: PaymentMethod.cpp  PaymentMethod.hpp  PaymentMethodDAO.cpp  PaymentMethodDAO.hpp  PaymentMethodMNG.cpp  PaymentMethodMNG.hpp
BackEnd/src/Person/: Person.cpp  Person.hpp
BackEnd/src/Product/: Product.cpp  Product.hpp  ProductDAO.cpp  ProductDAO.hpp  ProductDAOTest.cpp  ProductMNG.cpp  ProductMNG.hpp  main  teste.cpp
BackEnd/src/ProductOrder/: ProductOrder.cpp  ProductOrder.hpp  ProductOrderDAO.cpp  ProductOrderDAO.hpp
BackEnd/src/SQLconnection/: main  teste.cpp
BackEnd/src/SellOrder/: SellOrder.cpp  SellOrder.hpp  SellOrderDAO.cpp  SellOrderDAO.hpp  SellOrderDao.cpp  SellOrderDao.hpp  SellOrderMNG.cpp  SellOrderMNG.hpp
BackEnd/src/Server/: HTTPParser.hpp  TCPServer.cpp  TCPServer.hpp
BackEnd/src/Status/: Status.cpp  Status.hpp  StatusDAO.cpp  StatusDAO.hpp  StatusMNG.cpp  StatusMNG.hpp
BackEnd/src/Test/: Test.cpp  Test.hpp
BackEnd/src/Type/: Enum.hpp
BackEnd/src/User/: User.cpp  User.hpp  UserDAO.cpp  UserDAO.hpp  UserMNG.cpp  UserMNG.hpp  main  teste.cpp
FrontEnd/my-app/: Dockerfile  databaseCreator  package-lock.json  package.json
FrontEnd/my-app/BackEnd/src/Category/: CategoryDAO.hpp
FrontEnd/my-app/BackEnd/src/GenericProduct/: GenericProduct.cpp
FrontEnd/my-app/BackEnd/src/Product/: Product.hpp
FrontEnd/my-app/BackEnd/src/ProductOrder/: ProductOrder.cpp
FrontEnd/my-app/FrontEnd/my-app/: package-lock.json
FrontEnd/my-app/public/: index.html  main.js  manifest.json
FrontEnd/my-app/src/: App.css  App.js
FrontEnd/my-app/src/components/Buttons/: BackButton.css  Menu.css
FrontEnd/my-app/src/components/Clients/: Clients.css  Clients.js
FrontEnd/my-app/src/components/Daily/: Daily.css  Daily.jsx
FrontEnd/my-app/src/components/DailyOwe/: DailyOwe.jsx
FrontEnd/my-app/src/components/Employee/: Employee.css  Employee.js  Employees.css
FrontEnd/my-app/src/components/General/: General.css  General.js
FrontEnd/my-app/src/components/History/: History.css  History.js
FrontEnd/my-app/src/components/Home/: Home.css  Home.js
FrontEnd/my-app/src/components/Login/: Login.css  Login.js  Login.jsx
FrontEnd/my-app/src/components/Manufacturer/: Manufacturer.css  Manufacturer.js
FrontEnd/my-app/src/components/Menu/: Menu.css  Menuu.jsx
FrontEnd/my-app/src/components/Register/: Register.css  Register.js
FrontEnd/my-app/src/components/Sales/: Sales.css  Sales.js
FrontEnd/my-app/src/components/SalesHistory/: SalesHistory.css  SalesHistory.js
FrontEnd/my-app/src/components/SearchBar/: OneQuery.css  OneQuery.jsx  QueryList.css  QueryList.jsx  (+2 more)
src/: Client.hpp  Company.hpp  Person.hpp  Product.hpp  index.css  index.js
src/Person/: Person.hpp
src/Product/: Product.cpp  Product.hpp
src/components/Clients/: Clients.css
src/components/History/: History.css  History.js
src/components/Home/: Home.css
src/components/Login/: Login.css
src/components/Menu/: Menu.css  Menuu.jsx
src/components/Register/: Register.css  Register.js
src/components/Stock/: Stock.js
(+12 files in other folders)
